🐛 fix: utf-8bom to utf-8 This was adding a space after the header and before the footer

--- a/wp-content/themes/eyeconbeauty/scss/site/_mixins.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_mixins.scss
@@ -1,4 +1,4 @@
-﻿//Media query
+//Media query
 @mixin mq ($mq-width: min-width, $width: 400px) {
   @media screen and ($mq-width: $width) {
     @content
