--- a/wp-content/themes/eyeconbeauty/scss/site/_fonts.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_fonts.scss
@@ -1,4 +1,4 @@
-﻿// @font-face {
+// @font-face {
 // 	font-family: 'Manrope';
 // 	src: url('/wp-content/themes/eyeconbeauty/assets/fonts/Manrope-Regular.woff') format('woff2'), url('/wp-content/themes/eyeconbeauty/assets/fonts/Manrope-Regular.woff') format('woff');
 // 	font-weight: 400;
