💄✨ feat: add herobanners to home and wp dashboard

--- a/wp-content/themes/eyeconbeauty/scss/promo/_hero-banner.scss
+++ b/wp-content/themes/eyeconbeauty/scss/promo/_hero-banner.scss
@@ -7,7 +7,7 @@
   z-index: 0;
 
   .herobanner__img {
-    background-image: url('https://source.unsplash.com/random/1024x1024/?makeup');
+    // background-image: url('https://source.unsplash.com/random/1024x1024/?makeup');
     background-size: cover;
     width: 100%;
     z-index: 0;
