💄 feat: add hero banners as template parts

--- a/wp-content/themes/eyeconbeauty/scss/promo/_hero-banner.scss
+++ b/wp-content/themes/eyeconbeauty/scss/promo/_hero-banner.scss
@@ -23,6 +23,7 @@
     @include d-flex(column, 0.5rem);
     padding: 2.5rem;
     align-items: center;
+    text-align: center;
     // text-transform: uppercase;
     font-weight: 500;
     z-index: 0;
