--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -1,3 +1,26 @@
 ﻿@import './theme-header';
 
+@import './site/fonts';
+@import './site/variables';
+@import './site/mixins';
 @import './site/site';
+@import './site/headers';
+@import './site/typography';
+@import './site/lists';
+@import './site/buttons';
+
+@import './site/topbar';
+@import './site/footer';
+
+@import './products/product-list';
+@import './products/product-detail';
+@import './products/product-slider';
+@import './products/product-card';
+@import './products/product-wrapper';
+@import './products/image-slider';
+
+@import './about/community-slider';
+
+@import './promo/hero-banner';
+
+@import './utilities'
