--- a/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
@@ -1,11 +1,11 @@
 .product-card {
   @include d-flex(column, 0);
   padding: 5px;
-  //max-width: 178px;
+  max-width: 50%;
   
   img {
-    width: 168px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     margin: 0;
     display: block;
