💄 feat: collection-control in product list

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -13,6 +13,7 @@
 @import './site/footer';
 
 @import './products/product-list';
+@import './products/collection-control';
 @import './products/product-detail';
 @import './products/product-slider';
 @import './products/product-card';
