--- a/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
@@ -3,7 +3,7 @@
   row-gap: 27px;
   padding: 0 20px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
 
   .btn {
     margin-left: auto;
