--- a/wp-content/themes/eyeconbeauty/scss/products/_collection-control.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_collection-control.scss
@@ -8,8 +8,6 @@
     position: relative;
     @include d-flex(row, 0);
     justify-content: flex-end;
-    padding: 0.2rem 0.5rem;
-    border-bottom: 1px solid $text-color;
 
     svg {
       position: absolute;
@@ -29,9 +27,10 @@
       appearance: none;
       -o-appearance: none;
       -webkit-appearance: none;
-      padding: 0 30px 0 0;
+      padding: 0.2rem 2rem 0.2rem 0.5rem;
       background-color: $bg-color;
       border: none;
+      border-bottom: 1px solid $text-color;
       width:min-content;
       color: $text-color;
       
