💄 feat: pagination style

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -14,6 +14,7 @@
 
 @import './products/product-list';
 @import './products/collection-control';
+@import './products/pagination';
 @import './products/product-detail';
 @import './products/product-slider';
 @import './products/product-card';
