💄 feat: image carousel with flickity

--- a/wp-content/themes/eyeconbeauty/scss/products/_image-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_image-slider.scss
@@ -1,71 +1,24 @@
-.image-slider {
-  width: 100%;
-  height: 100vw;
-  position: relative;
+.image-carousel {
+  margin-bottom: 30px;
 
-  .image-slider__controls {
-    position: absolute;
-    // height: 100vw;
-    top: 50%;
-    @include d-flex();
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    border-radius: 50%;
-    background-color: rgba($bg-color, 0.5);
-    border: none;
+  .image-carousel__img {
+    width: 84vw;
+    height: 100vw;
+    margin-right: 10px;
 
-    svg {
-      width: 20px;
-      stroke: $text-color;
-      stroke-width: 2;
-    }
-
-    &.left {
-      left: 0;
-      padding-left: 0.9rem;
-      padding-right: 1.1rem;
-      margin-left: 0.5rem;
-    }
-
-    &.right {
-      right: 0;
-      padding-right: 0.9rem;
-      padding-left: 1.1rem;
-      margin-right: 0.5rem;
-    }
-  }
-
-  .image-slider__imgs {
-    @include d-flex(row, 2px);
-    overflow-y: scroll;
-    z-index: 1;
-    padding: 0 8vw;
-
-    img{
-      width: 84vw;
-      height: 100vw;
+    img {
+      height: 100%;
+      width: 100%;
       object-fit: cover;
-      display: block;
     }
+
   }
 
-  .image-slider__dots {
-    position: absolute;
-    bottom: 0.5rem;
-    width: 100%;
-    @include d-flex(row, 0.5rem);
-    justify-content: center;
-
-    span {
-      width: 5px;
-      height: 5px;
-      background-color: rgba($text-color, 0.4);
-      border-radius: 50%;
-
-      &:first-child {
-        background-color: $text-color;
-      }
-    }
+  .flickity-button {  
+    width: 2.5rem;
+    height: 2.5rem;
+    color: $text-color;
+    background: rgba(darken($bg-color, 10), 0.75)
   }
+
 }
