💄 feawt: initial 404 page

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -11,6 +11,7 @@
 
 @import './site/topbar';
 @import './site/footer';
+@import './site/404';
 
 @import './products/product-list';
 @import './products/collection-control';
