💄 feat: front-page product sliders

--- a/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
@@ -1,7 +1,11 @@
 .product-card {
   @include d-flex(column, 0);
   padding: 5px;
-  max-width: 50%;
+  width: 50%;
+
+  &.product-slider__card {
+    width: 178px;
+  }
   
   img {
     width: 100%;
