--- a/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
@@ -1,6 +1,12 @@
 $bg-color: #FEFEFE;
 $text-color: #1A1A1A;
 $grey-color: #6B6B6B;
+$grey1: #333333;
+$grey2: #4F4F4F;
+$grey3: #828282;
+$grey4: #BDBDBD;
+$grey5: #E0E0E0;
+$grey6: #F2F2F2;
 $cyan-color: #41EAD4;
 $magenta-color: #FF206E;
 $yellow-color: #FFD000;
