--- a/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
@@ -7,29 +7,25 @@
   }
 
   .community-slider-wrapper {
-    @include d-flex(column, 0);
-
-    .community-images-slider {
-      @include d-flex(column, 2px);
-      padding: 0 0 0 27px;
-      height: 302px;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      flex-wrap: wrap;
+      
+    .community-images__pair {
+      @include d-flex(column, 0);
 
       a {
         margin: 0;
         padding: 0;
+        width: 180px;
         position: relative;
-
+  
         img {
-          width: 150px;
-          height: 150px;
+          width: 180px;
+          height: 180px;
           object-fit: cover;
           display: block;
         }
-
+  
         span {
+          max-width: 170px;
           position: absolute;
           right: 0.5rem;
           bottom: 0.25rem;
@@ -41,15 +37,21 @@
       }
     }
 
-    .community-slider-bar {
-      margin: 14px 27px;
-      background-color: lighten($grey-color, 50%);
-
-      .community-slider-bar-thumb {
-        height: 4px;
-        width: 10%;
-        background-color: lighten($grey-color, 30%);
-      }
+    .flickity-page-dots {
+      bottom: -22px;
+      @include d-flex(row, 0);
+      width: 100%;
+      padding-left: 27px;
+      padding-right: 27px;
+      justify-content: stretch;
+    }
+    /* dots are lines */
+    .flickity-page-dots .dot {
+      margin: 0;
+      width: 100%;
+      height: 4px;
+      border-radius: 0;
+      background-color: $grey4;
     }
   }
 }
