--- a/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
@@ -19,12 +19,17 @@
 
   .flickity-page-dots {
     bottom: -22px;
+    @include d-flex(row, 0);
+    width: 100%;
+    padding-left: 27px;
+    padding-right: 27px;
+    justify-content: stretch;
   }
   /* dots are lines */
   .flickity-page-dots .dot {
-    height: 4px;
-    width: 40px;
     margin: 0;
+    width: 100%;
+    height: 4px;
     border-radius: 0;
     background-color: $grey4;
   }
