--- a/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
@@ -44,14 +44,15 @@
       padding-left: 27px;
       padding-right: 27px;
       justify-content: stretch;
+
+      .dot {
+        margin: 0;
+        width: 100%;
+        height: 4px;
+        border-radius: 0;
+        background-color: $grey4;
+      }
     }
-    /* dots are lines */
-    .flickity-page-dots .dot {
-      margin: 0;
-      width: 100%;
-      height: 4px;
-      border-radius: 0;
-      background-color: $grey4;
-    }
+
   }
 }
