--- a/wp-content/themes/eyeconbeauty/scss/products/_image-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_image-slider.scss
@@ -21,4 +21,21 @@
     background: rgba(darken($bg-color, 10), 0.75)
   }
 
+  .flickity-page-dots {
+    bottom: -22px;
+    @include d-flex(row, 0);
+    width: 100%;
+    padding-left: 27px;
+    padding-right: 27px;
+    justify-content: stretch;
+
+    .dot {
+      margin: 0;
+      width: 100%;
+      height: 4px;
+      border-radius: 0;
+      background-color: $grey4;
+    }
+  }
+
 }
