--- a/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
@@ -8,6 +8,11 @@
 
   .product-slider__wrapper {
     margin-bottom: 35px;
+
+    .product-card {
+      width: 178px;
+      padding: 5px;
+    }
   }
 
   .product-slider__btn {
