💄 fix: make description open by default

--- a/wp-content/themes/eyeconbeauty/scss/products/_product-detail.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-detail.scss
@@ -58,6 +58,11 @@
         }
         
       }
+
+      .info-group__content {
+        max-height: unset;
+        transition: max-height .3s
+      }
     }
   }
 }
