💄 feat: pages styles + about + page subtitle

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -11,6 +11,7 @@
 
 @import './site/topbar';
 @import './site/footer';
+@import './site/pages';
 @import './site/404';
 
 @import './products/product-list';
@@ -23,6 +24,7 @@
 @import './products/image-slider';
 
 @import './about/community-slider';
+@import './about/groups';
 
 @import './promo/hero-banner';
 
