💄 feat: cart table with products

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -27,6 +27,8 @@
 @import './about/community-slider';
 @import './about/groups';
 
+@import './bag/items-table';
+
 @import './contact/page';
 @import './contact/contact-form';
 
