💄 feat: reverse order cart-collaterals

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -28,6 +28,7 @@
 @import './about/groups';
 
 @import './bag/items-table';
+@import './bag/collaterals';
 
 @import './contact/page';
 @import './contact/contact-form';
