💄 feat: cart totals style

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -29,6 +29,7 @@
 
 @import './bag/items-table';
 @import './bag/collaterals';
+@import './bag/cart-totals';
 
 @import './contact/page';
 @import './contact/contact-form';
