💄 feat: cart coupon div

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -30,6 +30,7 @@
 @import './bag/items-table';
 @import './bag/collaterals';
 @import './bag/cart-totals';
+@import './bag/coupons';
 
 @import './contact/page';
 @import './contact/contact-form';
