💄 fix: restructure cart

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -28,7 +28,7 @@
 @import './about/groups';
 
 @import './bag/items-table';
-@import './bag/collaterals';
+@import './bag/cart-actions';
 @import './bag/cart-totals';
 @import './bag/coupons';
 
