💄 feat: notices wrapper style

--- a/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
@@ -10,6 +10,7 @@ $grey6: #F2F2F2;
 $cyan-color: #41EAD4;
 $magenta-color: #FF206E;
 $yellow-color: #FFD000;
+$red-color: #EB5757;
 
 $font-family: 'Manrope', sans-serif;
 $letter-spacing: 0.05em;
