--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -31,6 +31,7 @@
 @import './bag/cart-actions';
 @import './bag/cart-totals';
 @import './bag/coupons';
+@import './bag/empty-cart';
 
 @import './contact/page';
 @import './contact/contact-form';
