🐛 fix: if notice wrapper is empty hide

--- a/wp-content/themes/eyeconbeauty/scss/woocommerce/_notice-wrapper.scss
+++ b/wp-content/themes/eyeconbeauty/scss/woocommerce/_notice-wrapper.scss
@@ -2,6 +2,10 @@
   padding: 0 27px 1rem;
   @include d-flex(column, 0.5rem);
 
+  &:empty {
+    display: none;
+  }
+
   .woocommerce-message {
     border-left: 3px solid $yellow-color;
     background-color: lighten($yellow-color, 35);
