--- a/wp-content/themes/eyeconbeauty/scss/site/_site.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_site.scss
@@ -32,5 +32,5 @@ body {
 	@include d-flex(column, 0);
 	padding-left: 27px;
 	padding-right: 27px;
-	padding-bottom: 27px;
+	padding-bottom: 2rem;
 }
