--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -36,6 +36,8 @@
 @import './contact/page';
 @import './contact/contact-form';
 
+@import './account/access';
+
 @import './promo/hero-banner';
 
 @import './woocommerce/notice-wrapper';
