💄 feat: account wrapper and navigation

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -37,6 +37,8 @@
 @import './contact/contact-form';
 
 @import './account/access';
+@import './account/wrapper';
+@import './account/navigation';
 
 @import './promo/hero-banner';
 
