--- a/wp-content/themes/eyeconbeauty/scss/account/_wrapper.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_wrapper.scss
@@ -1,4 +1,28 @@
 .account-wrapper {
   @include d-flex(column, 2rem);
-  padding: 0 27px;
+
+  .account__navigation {
+    padding: 0 27px;
+  }
+  .account__content {
+    @include d-flex(column, 1.666667rem);
+    background-color: lighten($grey6, 4);
+    border-radius: 1.666667rem;
+    border: 1px solid $grey5;
+    padding: 2rem;
+    margin: 0 1rem;
+
+    form {
+      @include d-flex(column, 1.666667rem);
+
+      fieldset {
+        margin: 1rem 0 0 0;
+        padding: 0.5rem 0 0 0;
+        border: none;
+        border-top: 1px solid $grey4;
+
+      }
+    }
+
+  }
 }
