--- a/wp-content/themes/eyeconbeauty/scss/account/_navigation.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_navigation.scss
@@ -1,6 +1,5 @@
 .account__navigation {
-
-  position: relative;
+  
 
   .account__dropdown {
     margin: 0;
@@ -14,6 +13,7 @@
     color: inherit;
     font-size: 1rem;
     cursor: pointer;
+    position: relative;
   
     .toggle-icon {
       width: 20px;
@@ -46,16 +46,25 @@
   .account__items {
     position: absolute;
     z-index: 1;
-    background-color: $bg-color;
     width: 100%;
     overflow: hidden;
+    left: 0;
     max-height: 0;
     margin: 0;
     @include d-flex(column, 0);
     transition: max-height .2s;
+    padding: 0 27px;
 
     .account__item {
       display: flex;
+      align-items: stretch;
+      background-color: $bg-color;
+
+      &.is-active {
+        background-color: $cyan-color;
+        font-weight: 600;
+      }
+
       a {
         width: 100%;
         padding: 1rem 2rem;
