--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -39,6 +39,7 @@
 @import './account/access';
 @import './account/wrapper';
 @import './account/navigation';
+@import './account/address';
 
 @import './promo/hero-banner';
 
