💄 feat: header checkout

--- a/wp-content/themes/eyeconbeauty/scss/site/_topbar.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_topbar.scss
@@ -216,6 +216,22 @@
       
     }
   }
+
+  &.topbar-checkout {
+    .return-bag {
+      margin-right: 0.5rem;
+      font-weight: 600;
+      @include d-flex(row, 0.5rem);
+      align-items: center;
+
+      svg {
+        width: 1rem;
+        height: 1rem;
+        stroke-width: 2px;
+      }
+      
+    }
+  }
 }
 
 .overlay {
