--- a/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
@@ -117,4 +117,35 @@ footer {
       }
     }
   }
+
+  &.footer-checkout {
+
+    .footer-group {
+      @include d-flex(row, 2rem);
+      align-items: center;
+      padding: 0 1.33333rem;
+      justify-content: space-between;
+
+      .footer-nav {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        .menu {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: repeat(2, 1fr);
+          grid-column-gap: 0.5rem;
+          grid-row-gap: 0.5rem;
+          .menu-item {
+            display: block;
+            text-align: right;
+          }
+        }
+      }
+      .footer-logo {
+        @include logo(3.5rem, $bg-color);
+      }
+    }
+    
+  }
 }
