💄 feat: checkout address forms

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -41,6 +41,8 @@
 @import './account/navigation';
 @import './account/address';
 
+@import './checkout/checkout';
+
 @import './promo/hero-banner';
 
 @import './woocommerce/notice-wrapper';
