💄 feat: checkout coupon add coupon + updtpayments

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -43,6 +43,7 @@
 
 @import './checkout/checkout';
 @import './checkout/payment';
+@import './checkout/order-review';
 
 @import './promo/hero-banner';
 
