💄 fix: select input checkout hide select2

--- a/wp-content/themes/eyeconbeauty/scss/checkout/_checkout.scss
+++ b/wp-content/themes/eyeconbeauty/scss/checkout/_checkout.scss
@@ -9,4 +9,12 @@
       padding-top: 1.666667rem;
     }
   }
+
+  .field {
+    .woocommerce-input-wrapper {
+      .select2 {
+        display: none;
+      }
+    }
+  }
 }
