--- a/wp-content/themes/eyeconbeauty/scss/checkout/_payment.scss
+++ b/wp-content/themes/eyeconbeauty/scss/checkout/_payment.scss
@@ -31,4 +31,25 @@
       }
     }
   }
+
+  .place-order {
+    padding-top: 3rem;
+    @include d-flex(column, 2rem);
+
+    .terms-conditions-checkout {
+      @include d-flex(column, 1rem);
+    }
+
+    .button {
+      border: 0;
+      padding: 1rem;
+      text-transform: uppercase;
+      font-size: 1.166667rem;
+      font-weight: 600;
+      background-color: $magenta-color;
+      color: $bg-color;
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
+  }
 }
