💄 feat: order details section

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -44,6 +44,7 @@
 @import './checkout/checkout';
 @import './checkout/payment';
 @import './checkout/order-review';
+@import './checkout/thankyou';
 
 @import './promo/hero-banner';
 
