--- a/wp-content/themes/eyeconbeauty/scss/bag/_items-table.scss
+++ b/wp-content/themes/eyeconbeauty/scss/bag/_items-table.scss
@@ -48,6 +48,7 @@
 
           .product-name {
             @include d-flex(column, 0);
+            text-transform: uppercase;
 
             a {
               width: fit-content;
@@ -63,14 +64,14 @@
           .product-price {
             font-size: 1rem;
             color: $text-color;
-            font-weight: 600;
+            font-weight: 400;
           }
         }
       }
 
       .product-actions {
-        @include d-flex(column, 0);
-        justify-content: space-between;
+        @include d-flex(column, 1rem);
+        justify-content: flex-end;
         align-items: flex-end;
         padding: 0.5rem 0;
 
@@ -81,7 +82,13 @@
         .product-quantity {
           @include d-flex(row, 4px);
           align-items: center;
-          align-self: center;
+
+          &.qty-just-text {
+            font-family: $font-family;
+            font-weight: 400;
+            font-size: 1.333333rem;
+            gap: 1rem;
+          }
   
           .qty-btn {
             cursor: pointer;
