--- a/wp-content/themes/eyeconbeauty/scss/checkout/_thankyou.scss
+++ b/wp-content/themes/eyeconbeauty/scss/checkout/_thankyou.scss
@@ -1,18 +1,45 @@
-.thankyou-section {
-  @include d-flex(column, 1.666667rem);
-  background-color: lighten($grey6, 4);
-  border-radius: 1.666667rem;
-  border: 1px solid $grey5;
-  padding: 2rem;
-  margin: 0 1rem;
 
-  .order_details {
-    @include d-flex(column, 0.5rem);
-  }
-}
-
-.order-wrapper, .thankyou-wrapper {
+.thankyou-wrapper {
   @include d-flex(column, 2rem);
+  .thankyou-section {
+    @include d-flex(column, 1.666667rem);
+    background-color: lighten($grey6, 4);
+    border-radius: 1.666667rem;
+    border: 1px solid $grey5;
+    padding: 2rem;
+    margin: 0 1rem;
+  
+    .order_details {
+      @include d-flex(column, 0.5rem);
+
+      .payment-method-info {
+        padding-top: 2rem;
+
+        section {
+          @include d-flex(column, 0.5rem);
+          h2 {
+            font-size: 1.166667rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            margin: 0;
+          }
+
+          ul li {
+            font-weight: 600;
+
+            strong {
+              font-weight: 400;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .btn {
+    width: fit-content;
+    align-self: center;;
+  }
 }
 
 .thankyou-text {
