💄 feat: account orders section

--- a/wp-content/themes/eyeconbeauty/scss/style.scss
+++ b/wp-content/themes/eyeconbeauty/scss/style.scss
@@ -40,6 +40,7 @@
 @import './account/wrapper';
 @import './account/navigation';
 @import './account/address';
+@import './account/orders';
 
 @import './checkout/checkout';
 @import './checkout/payment';
