--- a/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-card.scss
@@ -2,8 +2,7 @@
   @include d-flex(column, 0);
   padding: 5px;
   width: 50%;
-
-  
+    
   img {
     width: 100%;
     height: 100%;
@@ -14,7 +13,8 @@
 
   .product-info {
     @include d-flex(column, 2rem);
-    padding: 0 5px;
+    padding: 0 5px 2.5rem;
+    position: relative;
 
     .product-info__info {
       @include d-flex(column, 5px);
@@ -64,6 +64,19 @@
       font-weight: 400;
       width: 100%;
       text-align: center;
+    }
+
+    .added_to_cart {
+      position: absolute;
+      bottom: 0;
+      left: 5px;
+     // transform: translateX(-50%);
+      border-left: 3px solid $yellow-color;
+      //border-right: 3px solid $yellow-color;
+      background-color: lighten($yellow-color, 35);
+      padding: 0.25rem 1rem;
+      color: $text-color;
+      font-weight: 500;
     }
   }
 }
