--- a/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
@@ -1,6 +1,6 @@
 .product-list {
   @include d-flex(row, 0);
-  row-gap: 27px;
+  row-gap: 1rem;
   padding: 0 20px;
   flex-wrap: wrap;
   justify-content: space-between;
