--- a/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-slider.scss
@@ -12,6 +12,11 @@
     .product-card {
       width: 178px;
       padding: 5px;
+
+      @include mq(max-width, 380px) {
+        width: 150px;
+        font-size: 11px;
+      }
     }
   }
 
