--- a/wp-content/themes/eyeconbeauty/scss/site/_site.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_site.scss
@@ -6,6 +6,10 @@
 
 html {
 	font-size: 12px;
+
+	@include mq(min-width, 800px) {
+		font-size: 16px;
+	}
 }
 
 body {
@@ -19,6 +23,10 @@ body {
 	main {
 		margin-top: 75px;
 		padding: 1rem 0 2.666667rem;
+
+		@include mq(min-width, 800px) {
+			margin-top: 64px;
+		}
 	} 
 
 	&.home {
